[gd_scene load_steps=31 format=2]

[ext_resource path="res://tilemap/MENU/menu.png" type="Texture" id=1]
[ext_resource path="res://tilemap/button/exitRight2.png" type="Texture" id=2]
[ext_resource path="res://tilemap/button/exitRight.png" type="Texture" id=3]
[ext_resource path="res://scene/bagian/rewardMenu.gd" type="Script" id=6]
[ext_resource path="res://tilemap/card/raden intan.png" type="Texture" id=7]
[ext_resource path="res://tilemap/card/radenintan5.png" type="Texture" id=8]
[ext_resource path="res://tilemap/inventory/bar inventori.png" type="Texture" id=10]
[ext_resource path="res://tilemap/button/circle.png" type="Texture" id=11]
[ext_resource path="res://tilemap/button/crossred.png" type="Texture" id=12]
[ext_resource path="res://tilemap/button/checkmarkgreen.png" type="Texture" id=13]
[ext_resource path="res://tilemap/button/circlebrown.png" type="Texture" id=14]
[ext_resource path="res://tilemap/button/locked.png" type="Texture" id=15]
[ext_resource path="res://tilemap/button/unlocked.png" type="Texture" id=16]
[ext_resource path="res://tilemap/button/checkmark.png" type="Texture" id=17]
[ext_resource path="res://tilemap/Full Coins.png" type="Texture" id=18]
[ext_resource path="res://jmlcoin.gd" type="Script" id=19]
[ext_resource path="res://tilemap/card/paper_shadow.png" type="Texture" id=20]
[ext_resource path="res://tilemap/MENU/BG MENU.jpg" type="Texture" id=21]
[ext_resource path="res://tilemap/card/bingkai.png" type="Texture" id=22]
[ext_resource path="res://tilemap/MENU/bg_bingkai.png" type="Texture" id=23]

[sub_resource type="CircleShape2D" id=1]

[sub_resource type="CircleShape2D" id=2]

[sub_resource type="DynamicFontData" id=3]
font_path = "res://font/AGoblinAppears-o2aV.ttf"

[sub_resource type="DynamicFont" id=4]
size = 6
outline_size = 1
outline_color = Color( 0.0588235, 0.00784314, 0.00784314, 1 )
extra_spacing_top = 2
extra_spacing_bottom = 2
extra_spacing_char = 1
extra_spacing_space = 1
font_data = SubResource( 3 )

[sub_resource type="DynamicFontData" id=5]
font_path = "res://font/dogica.ttf"

[sub_resource type="DynamicFont" id=6]
size = 8
outline_size = 1
outline_color = Color( 0.027451, 0, 0, 1 )
extra_spacing_top = 2
extra_spacing_bottom = 2
font_data = SubResource( 5 )

[sub_resource type="Animation" id=7]
resource_name = "coin"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}

[sub_resource type="DynamicFontData" id=8]
font_path = "res://font/dogica.ttf"

[sub_resource type="DynamicFont" id=9]
size = 11
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_top = 1
font_data = SubResource( 8 )

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 38, 56 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 6 )

[node name="BG MENU" type="Sprite" parent="."]
position = Vector2( 160, 96 )
scale = Vector2( 0.205833, 0.205833 )
texture = ExtResource( 21 )

[node name="menu" type="Sprite" parent="."]
position = Vector2( 160, 80 )
texture = ExtResource( 1 )

[node name="paper_shadow2" type="Sprite" parent="."]
visible = false
position = Vector2( 69, -16 )
scale = Vector2( 0.624704, 0.624704 )
texture = ExtResource( 20 )
offset = Vector2( 145.669, 132.863 )

[node name="paper_shadow3" type="Sprite" parent="."]
visible = false
position = Vector2( 165, -16 )
scale = Vector2( 0.624704, 0.624704 )
texture = ExtResource( 20 )
offset = Vector2( 145.669, 132.863 )

[node name="paper_shadow" type="Sprite" parent="."]
visible = false
position = Vector2( -27, -16 )
scale = Vector2( 0.624704, 0.624704 )
texture = ExtResource( 20 )
offset = Vector2( 145.669, 132.863 )

[node name="raden intan" type="Sprite" parent="."]
position = Vector2( 64, 72 )
scale = Vector2( 0.541667, 0.541667 )
texture = ExtResource( 7 )

[node name="bingkai2" type="Sprite" parent="."]
position = Vector2( 160, 72 )
texture = ExtResource( 22 )

[node name="bingkai3" type="Sprite" parent="."]
position = Vector2( 256, 72 )
texture = ExtResource( 22 )

[node name="radenintan2" type="Sprite" parent="."]
visible = false
position = Vector2( 64, 72 )
scale = Vector2( 0.39, 0.39 )
texture = ExtResource( 8 )

[node name="bingkai" type="Sprite" parent="."]
position = Vector2( 64, 72 )
texture = ExtResource( 22 )

[node name="locked" type="Sprite" parent="."]
position = Vector2( 63, 84 )

[node name="tombol1" type="TouchScreenButton" parent="locked"]
position = Vector2( -26, -35 )
normal = ExtResource( 15 )
pressed = ExtResource( 16 )

[node name="yakin" type="Sprite" parent="."]
visible = false

[node name="bar inventori" type="Sprite" parent="yakin"]
position = Vector2( 159, 73 )
texture = ExtResource( 10 )

[node name="yes" type="Sprite" parent="yakin/bar inventori"]
position = Vector2( -26, 15 )
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 14 )

[node name="checkmarkgreen" type="Sprite" parent="yakin/bar inventori/yes"]
position = Vector2( 0, 1 )
texture = ExtResource( 13 )

[node name="ya" type="TouchScreenButton" parent="yakin/bar inventori/yes"]
scale = Vector2( 1.65333, 1.65333 )
shape = SubResource( 1 )
shape_centered = false

[node name="no" type="Sprite" parent="yakin/bar inventori"]
position = Vector2( 24, 15 )
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 14 )

[node name="crossred" type="Sprite" parent="yakin/bar inventori/no"]
scale = Vector2( 0.85, 0.85 )
texture = ExtResource( 12 )

[node name="tidak" type="TouchScreenButton" parent="yakin/bar inventori/no"]
scale = Vector2( 1.65333, 1.65333 )
shape = SubResource( 2 )
shape_centered = false

[node name="RichTextLabel" type="RichTextLabel" parent="yakin/bar inventori"]
margin_left = -45.0
margin_top = -17.0
margin_right = 43.0
margin_bottom = 15.0
custom_fonts/normal_font = SubResource( 4 )
text = " Anda yakin?"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="uangkurang" type="Sprite" parent="."]
visible = false
position = Vector2( 160, 69 )
texture = ExtResource( 10 )

[node name="text" type="RichTextLabel" parent="uangkurang"]
margin_left = -47.0
margin_top = -22.0
margin_right = 55.0
margin_bottom = 6.0
custom_fonts/normal_font = SubResource( 6 )
text = " uang tidak 
  cukup!!!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="uangkurang" type="TouchScreenButton" parent="uangkurang"]
position = Vector2( -15, 10 )
normal = ExtResource( 14 )
pressed = ExtResource( 11 )
shape_centered = false

[node name="Sprite" type="Sprite" parent="uangkurang/uangkurang"]
position = Vector2( 15, 17 )
texture = ExtResource( 17 )

[node name="button" type="Sprite" parent="."]
position = Vector2( 161, 146 )

[node name="coin" type="Sprite" parent="button"]
position = Vector2( -17, 1 )
texture = ExtResource( 18 )
hframes = 8
frame = 5

[node name="AnimationPlayer" type="AnimationPlayer" parent="button/coin"]
autoplay = "coin"
anims/coin = SubResource( 7 )

[node name="Label" type="Label" parent="button/coin"]
margin_left = -4.0
margin_top = -8.0
margin_right = 26.0
margin_bottom = 8.0
rect_pivot_offset = Vector2( -114, 31 )
custom_fonts/font = SubResource( 9 )
text = " x"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="jmlcoin" type="Label" parent="button/coin"]
margin_left = 19.0
margin_top = -7.0
margin_right = 43.0
margin_bottom = 9.0
rect_pivot_offset = Vector2( -114, 31 )
custom_fonts/font = SubResource( 9 )
text = "aa"
script = ExtResource( 19 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bg_bingkai" type="Sprite" parent="."]
position = Vector2( 160, 80 )
texture = ExtResource( 23 )

[node name="exit" type="TouchScreenButton" parent="."]
position = Vector2( 290, 146 )
normal = ExtResource( 3 )
pressed = ExtResource( 2 )

[node name="ke_detail" type="TouchScreenButton" parent="."]
visible = false
position = Vector2( 64, 72 )
shape = SubResource( 10 )
shape_centered = false

[connection signal="released" from="locked/tombol1" to="." method="_on_tombol1_released"]
[connection signal="pressed" from="yakin/bar inventori/yes/ya" to="." method="_on_ya_pressed"]
[connection signal="pressed" from="yakin/bar inventori/no/tidak" to="." method="_on_tidak_pressed"]
[connection signal="released" from="uangkurang/uangkurang" to="." method="_on_uangkurang_released"]
[connection signal="released" from="exit" to="." method="_on_exit_released"]
[connection signal="pressed" from="ke_detail" to="." method="_on_ke_detail_pressed"]
